--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -8,3 +8,10 @@
 <p>{{serverCreationStatus}}</p>
 <app-server></app-server>
 <app-server></app-server>
+<hr>
+
+<label>Username</label>
+<input type="text" class="form-control" [(ngModel)]="userName">
+<p>{{userName}}</p>
+<!--<button class="btn btn-primary" [disabled]="userName===''" (click)="onUpdateUserName($event)">Reset</button>-->
+<button class="btn btn-primary" [disabled]="userName===''" (click)="userName=''">Reset</button>
