--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -5,13 +5,14 @@
 <!--<div>{{serverName}}</div>-->
 <button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onServerCreate()">Add server</button>
 <!--<p [innerText]="allowNewServer"></p>-->
-<p>{{serverCreationStatus}}</p>
+<!--<p>{{serverCreationStatus}}</p>-->
+<p>Server was created! Server name is  {{serverName}} </p>
 <app-server></app-server>
 <app-server></app-server>
 <hr>
 
 <label>Username</label>
 <input type="text" class="form-control" [(ngModel)]="userName">
-<p>{{userName}}</p>
+<p *ngIf="serverCreated">{{userName}}</p>
 <!--<button class="btn btn-primary" [disabled]="userName===''" (click)="onUpdateUserName($event)">Reset</button>-->
 <button class="btn btn-primary" [disabled]="userName===''" (click)="userName=''">Reset</button>
